per-app user authorization via regexp and authorizedUsers stanza

--- a/setup/manifests/base/pod-broker/crd.yaml
+++ b/setup/manifests/base/pod-broker/crd.yaml
@@ -73,6 +73,10 @@ spec:
               type: string
             disabled:
               type: boolean
+            authorizedUsers:
+              type: array
+              items:
+                type: string
             bundle:
               type: object
               required:
