add spec.disableOptions to disable options menu for users and ignore appuserconfig

--- a/setup/manifests/base/pod-broker/crd.yaml
+++ b/setup/manifests/base/pod-broker/crd.yaml
@@ -110,6 +110,8 @@ spec:
                     type: string
                   digest:
                     type: string
+            disableOptions:
+              type: boolean
             userParams:
               type: array
               items:
