--- a/setup/manifests/base/turn/turn-daemonset.yaml
+++ b/setup/manifests/base/turn/turn-daemonset.yaml
@@ -26,6 +26,8 @@ spec:
       maxUnavailable: 50%
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
       labels:
         app: turn
     spec:
