--- a/setup/manifests/base/turn/turn-discovery-service.yaml
+++ b/setup/manifests/base/turn/turn-discovery-service.yaml
@@ -15,12 +15,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: turn
+  name: turn-discovery
 spec:
+  clusterIP: None
   type: ClusterIP
   ports:
     - name: rest
       port: 80
-      targetPort: 8080
+      targetPort: 8088
   selector:
-    app: turn-web-aggregator
+    app: turn
