--- a/setup/manifests/base/pod-broker/broker-statefulset.yaml
+++ b/setup/manifests/base/pod-broker/broker-statefulset.yaml
@@ -59,6 +59,20 @@ spec:
         retryOn: gateway-error,connect-failure,refused-stream
     - match:
         - uri:
+            prefix: /reservation-broker/
+      rewrite:
+        uri: /
+      route:
+        - destination:
+            host: pod-broker
+            port:
+              number: 8082
+      retries:
+        attempts: 1
+        perTryTimeout: 2s
+        retryOn: gateway-error,connect-failure,refused-stream
+    - match:
+        - uri:
             prefix: /publish/
       rewrite:
         uri: /
@@ -150,6 +164,9 @@ spec:
     - port: 8081
       name: http-publish
       targetPort: 8081
+    - port: 8082
+      name: http-rbroker
+      targetPort: 8082
     - port: 80
       name: http-web
       targetPort: 80
@@ -178,9 +195,19 @@ spec:
       terminationGracePeriodSeconds: 5
       volumes:
         ###
-        # temp volume for building manifests
+        # temp volume for building statefulset manifests
         ###
-        - name: build
+        - name: build-statefulsets
+          emptyDir: {}
+        ###
+        # temp volume for building deployment type manifests
+        ###
+        - name: build-deployments
+          emptyDir: {}
+        ###
+        # temp volume for building deployment type user manifests
+        ###
+        - name: build-deployments-user
           emptyDir: {}
         ###
         # temp volume for building user namespace manifests
@@ -230,7 +257,7 @@ spec:
                   name: oauth-client-id
                   key: CLIENT_ID
           volumeMounts:
-            - name: build
+            - name: build-statefulsets
               mountPath: /var/run/build
             - name: buildns
               mountPath: /var/run/buildns
@@ -241,6 +268,40 @@ spec:
           readinessProbe:
             tcpSocket:
               port: 8080
+        ###
+        # reservation-broker
+        ###
+        - name: reservation-broker
+          image: gcr.io/cloud-solutions-images/kube-pod-broker-controller:latest
+          command: ["/usr/local/bin/reservation-broker"]
+          workingDir: "/var/run/build"
+          # Pull default pod broker config from ConfigMap
+          # Contains keys in the form of POD_BROKER_PARAM_ValueName=Value
+          envFrom:
+            - configMapRef:
+                name: pod-broker-config
+                optional: false
+          env:
+            - name: COOKIE_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: pod-broker
+                  key: COOKIE_SECRET
+            - name: OAUTH_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: oauth-client-id
+                  key: CLIENT_ID
+          volumeMounts:
+            - name: build-deployments
+              mountPath: /var/run/build
+            - name: build-deployments-user
+              mountPath: /var/run/buildusr
+            - name: buildsrc
+              mountPath: /var/run/buildsrc
+          readinessProbe:
+            tcpSocket:
+              port: 8082
         ###
         # App config finder sidecar
         ###
@@ -254,7 +315,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
           volumeMounts:
-            - name: build
+            - name: build-statefulsets
               mountPath: /var/run/build
             - name: buildsrc
               mountPath: /var/run/buildsrc
@@ -274,7 +335,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
           volumeMounts:
-            - name: build
+            - name: build-statefulsets
               mountPath: /var/run/build
             - name: userconfig
               mountPath: /var/run/userconfig
