updates to reservation controller, resource types now saved in annotation for deletion

--- a/images/web/Dockerfile
+++ b/images/web/Dockerfile
@@ -20,5 +20,16 @@ COPY src/app.js src/index.html ./
 COPY src/pod_broker.js .
 COPY config/default.conf /etc/nginx/conf.d/default.conf
 
+# Copy CDN resources
+WORKDIR /usr/share/nginx/html/vendor/
+
+ADD "https://cdnjs.cloudflare.com/ajax/libs/vuetify/2.1.12/vuetify.min.css" vuetify.min.css
+ADD "https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.9/vue.min.js" vue.min.js
+ADD "https://cdnjs.cloudflare.com/ajax/libs/vuetify/2.1.12/vuetify.min.js" vuetify.min.js
+ADD "https://cdn.jsdelivr.net/npm/vue-spinner@1.0.3/dist/vue-spinner.min.js" vue-spinner.min.js
+RUN chmod 0644 *
+
+WORKDIR /usr/share/nginx/html/
+
 # Patch index.html to fetch latest version of javascript source
 RUN sed -i 's|script src="\(.*\)?ts=.*"|script src="\1?ts='$(date +%s)'"|g' index.html
