--- a/setup/manifests/base/node/pd-balanced-storage-class.yaml
+++ b/setup/manifests/base/node/pd-balanced-storage-class.yaml
@@ -12,16 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-namespace: kube-system
-
-resources:
-  # Node init daemonset that pulls images
-  - node-init.yaml
-  # Storage class to use SSD persistent disks.
-  - pd-ssd-storage-class.yaml
-  - pd-balanced-storage-class.yaml
-  # Storage class to use standard persistent disks with volume expansion enabled.
-  - pd-standard-storage-class.yaml
-  # Node termination handler (for preemptible nodes)
-  - node-termination-handler-ds.yaml
-  - node-termination-handler-rbac.yaml
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: pd-balanced
+provisioner: kubernetes.io/gce-pd
+parameters:
+  type: pd-balanced
+allowVolumeExpansion: true
