enable GCE CSI driver for private clusters, add pd-balanced storageclass, patch istiod resource requests

--- a/setup/manifests/base/istio/istiooperator-1.7.yaml
+++ b/setup/manifests/base/istio/istiooperator-1.7.yaml
@@ -34,6 +34,10 @@ spec:
           # Increasing the min replica count helps with node upgrades.
           maxReplicas: 5
           minReplicas: 2
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
     
     ingressGateways:
       - name: istio-ingressgateway
