--- a/setup/manifests/base/node/pd-balanced-storage-class.yaml
+++ b/setup/manifests/base/node/pd-balanced-storage-class.yaml
@@ -16,7 +16,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: pd-balanced
-provisioner: kubernetes.io/gce-pd
+provisioner: pd.csi.storage.gke.io
+volumeBindingMode: Immediate
+allowVolumeExpansion: true
 parameters:
   type: pd-balanced
-allowVolumeExpansion: true
