--- a/images/cloudbuild.yaml
+++ b/images/cloudbuild.yaml
@@ -28,6 +28,9 @@ tags:
 # Images to be pushed
 ###
 images: [
+    # installer
+    'gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}',
+    'gcr.io/${PROJECT_ID}/broker-installer:latest',
     # controller
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:latest',
@@ -49,6 +52,34 @@ images: [
 ]
 
 steps:
+###
+# Builds the image used to run the deployment
+###
+- name: 'gcr.io/cloud-builders/docker'
+  id: installer-pull
+  entrypoint: 'bash'
+  args: ["-c", "if [[ '${_USE_CACHE}' == 'true' ]]; then (docker pull gcr.io/${PROJECT_ID}/broker-installer:latest || exit 0); fi"]
+  waitFor: ["-"]
+- name: 'gcr.io/cloud-builders/docker'
+  id: installer
+  args: [
+            'build',
+            '-t', 'gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}',
+            '--cache-from', 'gcr.io/${PROJECT_ID}/broker-installer:latest',
+            'installer'
+        ]
+  waitFor:
+    - installer-pull
+- name: 'gcr.io/cloud-builders/docker'
+  id: installer-tags
+  args: [
+            'tag',
+            'gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}',
+            'gcr.io/${PROJECT_ID}/broker-installer:latest',
+        ]
+  waitFor:
+    - installer
+
 ###
 # Pod broker controller image
 ###
