--- a/setup/infra/cloudbuild.yaml
+++ b/setup/infra/cloudbuild.yaml
@@ -17,8 +17,8 @@ substitutions:
   _ACTION: apply
   _NAME: broker
 tags:
-  - kube-app-launcher-infra
-  - kube-app-launcher-setup
+  - selkies-infra
+  - selkies-setup
 steps:
   ###
   # Create GCS bucket to store terraform state
