--- a/setup/infra/node-pool-apps/cloudbuild.yaml
+++ b/setup/infra/node-pool-apps/cloudbuild.yaml
@@ -20,8 +20,8 @@ substitutions:
   _TIER1: "true"
   _TIER2: "true"
 tags:
-  - kube-app-launcher-node-pool-apps
-  - kube-app-launcher-setup
+  - selkies-node-pool-apps
+  - selkies-setup
 steps:
   ###
   # Apply terraform to create cluster
