pull auth header name from Secret Manager, broker-auth-header, automatically roll pod-broker when configmap hash changes via cloud build

--- a/setup/manifests/base/pod-broker/broker-statefulset.yaml
+++ b/setup/manifests/base/pod-broker/broker-statefulset.yaml
@@ -190,6 +190,8 @@ spec:
     metadata:
       labels:
         app: pod-broker
+      annotations:
+        app.broker/config-hash: "deadbeef"
     spec:
       serviceAccountName: pod-broker
       terminationGracePeriodSeconds: 5
